deploy/tang/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tang
  namespace: tang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tang
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tang
    spec:
      containers:
        - name: tang
          image: xavor/tang-server:1.0
          ports:
            - name: http
              containerPort: 80
              hostPort: 8082
              protocol: TCP
          volumeMounts:
            - name: tang-data
              mountPath: /var/db/tang
      volumes:
        - name: tang-data
          persistentVolumeClaim:
            claimName: tang-data
